@@ -2,7 +2,8 @@ plugin: user-interact-verify
 name: codecs/ogg-vorbis
 requires:
  package.name == 'gstreamer0.10-plugins-base' or package.name == 'gstreamer1.0-plugins-base'
- package.name == 'totem' and package.name == 'ubuntu-sounds'
+ package.name == 'totem'
+ package.name == 'ubuntu-sounds'
 command: totem /usr/share/sounds/ubuntu/stereo/system-ready.ogg
 _description:
  PURPOSE:
@@ -17,7 +18,8 @@ plugin: user-interact-verify
 name: codecs/wav
 requires:
  package.name == 'gstreamer0.10-plugins-good' or package.name == 'gstreamer1.0-plugins-good'
- package.name == 'totem' and package.name == 'alsa-utils'
+ package.name == 'totem'
+ package.name == 'alsa-utils'
 command: totem /usr/share/sounds/alsa/Noise.wav
 _description:
  PURPOSE:
