@@ -10,7 +10,9 @@ _description:
 
 plugin: shell
 name: install/oem-config
-requires: package.name == 'oem-config-gtk' and package.name == 'python-xpresser'
+requires:
+ package.name == 'oem-config-gtk'
+ package.name == 'python-xpresser'
 user: root
 environ: CHECKBOX_SHARE
 command: oem_config_test -u 'testaccount1' -p 'testaccount1' -d $CHECKBOX_SHARE/data/images/oem-config/
